--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=config-service
+server.port=8888
 
+spring.cloud.config.server.git.uri=https://github.com/Bayvao/AppConfigProperties
+spring.cloud.config.server.git.username=
+spring.cloud.config.server.git.password=
+
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
